--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
-  background-image: url(https://www.thesun.co.uk/wp-content/uploads/2019/06/asc-fortnite-summerbeach.jpg);
+  background-image: url(https://static.standard.co.uk/s3fs-public/thumbnails/image/2019/10/15/12/fortnie-chapter-2.jpg?w968);
   background-size: cover;
   justify-content: space-between;
   align-items: center;
